--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -8,3 +8,4 @@
 25 = Impossible de lire l'ordre
 26 = Impossible de mettre à jour la commande
 27 = Impossible de supprimer la commande
+30 = Impossible de créer une commande sans restaurant
