--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -9,3 +9,4 @@
 26 = Cannot update order
 27 = Cannot delete order
 30 = Cannot create order without existing restaurant
+40 = Authentication failure
