--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -9,3 +9,4 @@
 26 = Impossible de mettre à jour la commande
 27 = Impossible de supprimer la commande
 30 = Impossible de créer une commande sans restaurant
+40 = Échec d'authentification
