--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -8,5 +8,7 @@
 25 = Cannot read order
 26 = Cannot update order
 27 = Cannot delete order
-30 = Cannot create order without existing restaurant
-40 = Authentication failure
+30 = Restaurant not exists
+31 = Item not exist
+32 = Invalid order id
+33 = Invalid item id
