--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -8,5 +8,7 @@
 25 = Impossible de lire l'ordre
 26 = Impossible de mettre à jour la commande
 27 = Impossible de supprimer la commande
-30 = Impossible de créer une commande sans restaurant
-40 = Échec d'authentification
+30 = Le restaurant n'existe pas
+31 = Articlen'existe pas
+32 = ID de commande incorrect
+33 = ID d'élément incorrect
