--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -10,5 +10,5 @@
 27 = Cannot delete order
 30 = Restaurant not exists
 31 = Item not exist
-32 = Invalid order id
-33 = Invalid item id
+32 = Invalid pattern for order id
+33 = Invalid pattern for item id
