Resolving API key missing error

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,3 +1,4 @@
+0 = Internal Server Error
 10 = Item not found
 11 = Order not found
 20 = Cannot create item
@@ -13,3 +14,4 @@
 32 = Invalid pattern for order id
 33 = Invalid pattern for item id
 40 = Authentication failure
+41 = Authentication key is missing
