--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -1,3 +1,4 @@
+0 = Erreur Interne du Serveur
 10 = Objet non-trouvé
 11 = Commande non trouvée
 20 = Impossible de créer un élément
@@ -13,3 +14,4 @@
 32 = ID de commande incorrect
 33 = ID d'élément incorrect
 40 = Échec d'authentification
+41 = La clé d'authentification est manquante
