locale set for validation errors

--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -8,7 +8,7 @@
 25 = Impossible de lire l'ordre
 26 = Impossible de mettre à jour la commande
 27 = Impossible de supprimer la commande
-30 = Le restaurant n'existe pas
+30 = La date de valid util devrait être future
 31 = Articlen'existe pas
 32 = ID de commande incorrect
 33 = ID d'élément incorrect
