Restaurant validation logic handled

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -13,5 +13,6 @@
 31 = Item not exist
 32 = Invalid pattern for order id
 33 = Invalid pattern for item id
+34 = Restaurant should exist for order
 40 = Authentication failure
 41 = Authentication key is missing
