--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -13,5 +13,6 @@
 31 = Articlen'existe pas
 32 = ID de commande incorrect
 33 = ID d'élément incorrect
+34 = Le restaurant devrait exister pour l'ordre
 40 = Échec d'authentification
 41 = La clé d'authentification est manquante
